--- a/pom.xml
+++ b/pom.xml
@@ -53,18 +53,21 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.caconfig.api</artifactId>
+            <!-- Stick with dependency version 1.1.0 as it was released with caconfig-mock-plugin 1.0.0 -->
             <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.caconfig.spi</artifactId>
+            <!-- Stick with dependency version 1.2.0 as it was released with caconfig-mock-plugin 1.0.0 -->
             <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.caconfig.impl</artifactId>
+            <!-- Stick with dependency version 1.2.0 as it was released with caconfig-mock-plugin 1.0.0 -->
             <version>1.2.0</version>
             <scope>compile</scope>
         </dependency>
@@ -110,6 +113,56 @@
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.caconfig.impl</artifactId>
                     <version>1.1.0</version>
+                    <scope>compile</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <!-- Test with Sling CAConfig Impl/SPI 1.2 -->
+        <profile>
+            <id>caconfig-1.2</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.caconfig.api</artifactId>
+                    <version>1.1.0</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.caconfig.spi</artifactId>
+                    <version>1.2.0</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.caconfig.impl</artifactId>
+                    <version>1.2.0</version>
+                    <scope>compile</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <!-- Test with Sling CAConfig Impl/SPI 1.3 -->
+        <profile>
+            <id>caconfig-1.3</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.caconfig.api</artifactId>
+                    <version>1.1.0</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.caconfig.spi</artifactId>
+                    <version>1.2.1-SNAPSHOT</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.caconfig.impl</artifactId>
+                    <version>1.2.1-SNAPSHOT</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
