--- a/pom.xml
+++ b/pom.xml
@@ -156,13 +156,13 @@
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.caconfig.spi</artifactId>
-                    <version>1.2.1-SNAPSHOT</version>
+                    <version>1.3.0</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.caconfig.impl</artifactId>
-                    <version>1.2.1-SNAPSHOT</version>
+                    <version>1.3.0</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
