--- a/pom.xml
+++ b/pom.xml
@@ -53,22 +53,19 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.caconfig.api</artifactId>
-            <!-- Stick with dependency version 1.1.0 as it was released with caconfig-mock-plugin 1.0.0 -->
             <version>1.1.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.caconfig.spi</artifactId>
-            <!-- Stick with dependency version 1.2.0 as it was released with caconfig-mock-plugin 1.0.0 -->
-            <version>1.2.0</version>
+            <version>1.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.caconfig.impl</artifactId>
-            <!-- Stick with dependency version 1.2.0 as it was released with caconfig-mock-plugin 1.0.0 -->
-            <version>1.2.0</version>
+            <version>1.3.3-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
