--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     
     <artifactId>org.apache.sling.testing.caconfig-mock-plugin</artifactId>
     <packaging>bundle</packaging>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.2</version>
     <name>Apache Sling Context-Aware Configuration Mock Plugin</name>
     <description>Mock Context Plugin for Apache Sling Context-Aware Configuration</description>
 
@@ -37,7 +37,8 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-caconfig-mock-plugin.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-caconfig-mock-plugin.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-testing-caconfig-mock-plugin.git</url>
-    </scm>
+      <tag>org.apache.sling.testing.caconfig-mock-plugin-1.3.2</tag>
+  </scm>
     
     <build>
         <plugins>
