--- a/pom.xml
+++ b/pom.xml
@@ -91,14 +91,14 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.sling-mock.core</artifactId>
-            <version>3.0.3-SNAPSHOT</version>
+            <version>3.1.0</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.sling-mock.junit4</artifactId>
-            <version>3.0.3-SNAPSHOT</version>
+            <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
