--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling-bundle-parent</artifactId>
-        <version>41</version>
+        <version>46</version>
         <relativePath />
     </parent>
 
@@ -32,6 +32,10 @@
     <version>1.3.3-SNAPSHOT</version>
     <name>Apache Sling Context-Aware Configuration Mock Plugin</name>
     <description>Mock Context Plugin for Apache Sling Context-Aware Configuration</description>
+
+    <properties>
+        <project.build.outputTimestamp>2021-11-29T00:00:00Z</project.build.outputTimestamp>
+    </properties>
 
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-caconfig-mock-plugin.git</connection>
