SLING-10971 caconfig-mock-plugin: Make dependency to org.apache.sling.testing.sling-mock.core "provided"

--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.sling-mock.core</artifactId>
             <version>3.2.0</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
