--- a/pom.xml
+++ b/pom.xml
@@ -29,19 +29,19 @@
 
     <artifactId>org.apache.sling.testing.caconfig-mock-plugin</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.6</version>
+    <version>1.3.7-SNAPSHOT</version>
     <name>Apache Sling Context-Aware Configuration Mock Plugin</name>
     <description>Mock Context Plugin for Apache Sling Context-Aware Configuration</description>
 
     <properties>
-        <project.build.outputTimestamp>2021-12-07T08:42:20Z</project.build.outputTimestamp>
+        <project.build.outputTimestamp>2021-12-07T08:42:53Z</project.build.outputTimestamp>
     </properties>
 
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-caconfig-mock-plugin.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-caconfig-mock-plugin.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-testing-caconfig-mock-plugin.git</url>
-        <tag>org.apache.sling.testing.caconfig-mock-plugin-1.3.6</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
