--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <scm>
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-caconfig-mock-plugin.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-caconfig-mock-plugin.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-testing-caconfig-mock-plugin.git</url>
+        <url>https://github.com/apache/sling-org-apache-sling-testing-caconfig-mock-plugin.git</url>
         <tag>HEAD</tag>
     </scm>
 
