--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling-bundle-parent</artifactId>
-        <version>60</version>
+        <version>62</version>
         <relativePath />
     </parent>
 
@@ -42,6 +42,7 @@
 
     <properties>
         <project.build.outputTimestamp>2023-12-11T14:53:01Z</project.build.outputTimestamp>
+        <sling.java.version>11</sling.java.version>
     </properties>
 
     <dependencies>
